--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -18,6 +18,8 @@ file(GLOB cxx_headers_variadic ${CMAKE_CURRENT_LIST_DIR}/timemory/variadic/*.hpp
 file(GLOB_RECURSE cxx_headers_backends ${CMAKE_CURRENT_LIST_DIR}/timemory/backends/*.hpp)
 file(GLOB_RECURSE cxx_headers_components
      ${CMAKE_CURRENT_LIST_DIR}/timemory/components/*.hpp)
+file(GLOB cxx_headers_sampling ${CMAKE_CURRENT_LIST_DIR}/timemory/sampling/*.hpp
+     ${CMAKE_CURRENT_LIST_DIR}/timemory/sampling/*.cpp)
 file(GLOB cxx_headers_macros ${CMAKE_CURRENT_LIST_DIR}/timemory/macros/*.hpp)
 file(GLOB cxx_headers_api ${CMAKE_CURRENT_LIST_DIR}/timemory/api/*.hpp)
 file(GLOB cxx_headers_ert ${CMAKE_CURRENT_LIST_DIR}/timemory/ert/*.hpp)
@@ -60,6 +62,7 @@ set(timemory_glob_headers
     ${cxx_headers_ert}
     ${cxx_headers_backends}
     ${cxx_headers_components}
+    ${cxx_headers_sampling}
     ${cxx_headers_mpl}
     ${cxx_headers_math}
     ${cxx_headers_utility}
