--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,12 +81,16 @@ include(GNUInstallDirs)
 set(CMAKE_INSTALL_CONFIGDIR ${CMAKE_INSTALL_DATAROOTDIR}/cmake/${PROJECT_NAME})
 
 if(UNIX AND NOT APPLE)
-    set(CMAKE_INSTALL_RPATH
-        "\$ORIGIN:\$ORIGIN/../${CMAKE_INSTALL_LIBDIR}:\$ORIGIN/timemory:\$ORIGIN")
-    if(NOT SKBUILD AND NOT SPACK_BUILD)
+    if(timemory_MAIN_PROJECT)
         set(CMAKE_INSTALL_RPATH
-            "${CMAKE_INSTALL_RPATH}:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/timemory"
-            )
+            "\$ORIGIN:\$ORIGIN/../${CMAKE_INSTALL_LIBDIR}:\$ORIGIN/timemory:\$ORIGIN")
+        if(NOT SKBUILD AND NOT SPACK_BUILD)
+            set(CMAKE_INSTALL_RPATH
+                "${CMAKE_INSTALL_RPATH}:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}:${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/timemory"
+                )
+        endif()
+    else()
+        set(CMAKE_INSTALL_RPATH "\$ORIGIN")
     endif()
 endif()
 
