Support TIMEMORY_CXX_LIBRARY_EXCLUDE in CMake
- useful when subproject to avoid compiling certain parts of library implementation

--- a/.cmake-format.yaml
+++ b/.cmake-format.yaml
@@ -185,8 +185,8 @@ format:
 markup:
   bullet_char: '*'
   enum_char: .
-  first_comment_is_literal: false
-  literal_comment_pattern: null
+  first_comment_is_literal: true
+  literal_comment_pattern: ^#
   fence_pattern: ^\s*([`~]{3}[`~]*)(.*)$
   ruler_pattern: ^\s*[^\w\s]{3}.*[^\w\s]{3}$
   explicit_trailing_pattern: '#<'
