--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -3,9 +3,13 @@ name: formatting
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master, develop, omnitrace ]
   pull_request:
     branches: [ master, develop ]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   python-formatting:
