--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,13 @@ name: python-package
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master, develop, omnitrace ]
   pull_request:
     branches: [ master, develop ]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   linting:
