--- a/docker/gpu/Dockerfile.dev
+++ b/docker/gpu/Dockerfile.dev
@@ -1,5 +1,5 @@
 # Build stage with Spack pre-installed and ready to be used
-FROM spack/ubuntu-bionic:latest as builder
+FROM spack/ubuntu-focal:latest as builder
 # FROM ecpe4s/ubuntu18.04-spack-x86_64:0.15.3 as builder
 
 ARG GCC_VERSION=8
@@ -28,7 +28,8 @@ RUN mkdir /opt/environment \
     &&   echo "  - dyninst" \
     &&   echo "  - caliper~papi" \
     &&   echo "  - gperftools" \
-    &&   echo "  concretization: together" \
+    &&   echo "  concretizer:" \
+    &&   echo "    unify: when_possible" \
     &&   echo "  config:" \
     &&   echo "    install_tree: /opt/software" \
     &&   echo "  view: /opt/view" \
@@ -47,7 +48,7 @@ RUN cd /opt/environment && \
     rm e4s.pub && \
     spack compiler find && \
     spack external find && \
-    spack --env . install && \
+    spack --env . install --reuse && \
     spack gc -y && \
     spack clean -a
 
@@ -56,7 +57,7 @@ RUN cd /opt/environment && \
     spack env activate --sh -d . >> /etc/profile.d/z10_spack_environment.sh
 
 # Bare OS image to run the installed executables
-FROM spack/ubuntu-bionic:latest
+FROM spack/ubuntu-focal:latest
 
 COPY --from=builder / /
 
