--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -219,7 +219,7 @@ function(TIMEMORY_PYTHON_CONSOLE_SCRIPT SCRIPT_NAME SCRIPT_SUBMODULE SCRIPT_FUNC
 endfunction()
 
 if(NOT PYTHON_EXECUTABLE)
-    set(PYTHON_EXECUTABLE "/usr/bin/env python")
+    set(PYTHON_EXECUTABLE "/usr/bin/env python3")
 endif()
 
 timemory_python_console_script("timemory-plotter" "timemory.plotting" "try_plot")
