Support line info mapping in signal handler backtrace

--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -49,23 +49,13 @@ if(NOT timemory_MAIN_PROJECT AND TIMEMORY_SOURCE_TREE_HEADERS)
 endif()
 
 file(
-    GLOB_RECURSE
-    header_files
-    ${CMAKE_CURRENT_SOURCE_DIR}/utility/*.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/hash/*.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/environment/*.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/settings/*.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/plotting/*.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/signals/*.hpp)
+    GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/utility/*.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/hash/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/environment/*.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/settings/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/plotting/*.hpp)
 file(
-    GLOB_RECURSE
-    source_files
-    ${CMAKE_CURRENT_SOURCE_DIR}/utility/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/hash/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/environment/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/settings/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/plotting/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/signals/*.cpp)
+    GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/utility/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/hash/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/environment/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/settings/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/plotting/*.cpp)
 
 timemory_build_intermediate_library(
     USE_INTERFACE INSTALL_SOURCE
@@ -79,6 +69,7 @@ timemory_build_intermediate_library(
 
 # core
 add_subdirectory(signals)
+add_subdirectory(unwind)
 
 if(TIMEMORY_USE_COVERAGE)
     if(TARGET timemory-core-shared)
@@ -108,7 +99,6 @@ add_subdirectory(variadic)
 add_subdirectory(config)
 add_subdirectory(backends)
 add_subdirectory(sampling)
-add_subdirectory(unwind)
 
 # deprecated
 add_subdirectory(deprecated)
