--- a/source/timemory/signals/CMakeLists.txt
+++ b/source/timemory/signals/CMakeLists.txt
@@ -1,4 +1,13 @@
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-timemory_install_header_files(${header_files} ${source_files})
+timemory_build_intermediate_library(
+    USE_INTERFACE INSTALL_SOURCE
+    NAME core
+    TARGET core
+    CATEGORY GLOBAL
+    FOLDER components
+    HEADERS ${header_files}
+    SOURCES ${source_files}
+    DEPENDS timemory::timemory-libunwind timemory::timemory-bfd
+    PROPERTY_DEPENDS GLOBAL)
