--- a/source/timemory/unwind/CMakeLists.txt
+++ b/source/timemory/unwind/CMakeLists.txt
@@ -7,8 +7,8 @@ file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 timemory_build_intermediate_library(
     USE_INTERFACE INSTALL_SOURCE
-    NAME unwind
-    TARGET unwind
+    NAME core
+    TARGET core
     CATEGORY GLOBAL
     FOLDER components
     HEADERS ${header_files}
