--- a/source/timemory/utility/CMakeLists.txt
+++ b/source/timemory/utility/CMakeLists.txt
@@ -1,14 +1,10 @@
-if(WIN32)
-    return()
-endif()
-
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 timemory_build_intermediate_library(
     USE_INTERFACE INSTALL_SOURCE
-    NAME utility
-    TARGET utility
+    NAME core
+    TARGET core
     CATEGORY GLOBAL
     FOLDER components
     HEADERS ${header_files}
