--- a/source/timemory/environment/CMakeLists.txt
+++ b/source/timemory/environment/CMakeLists.txt
@@ -2,9 +2,9 @@ file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 timemory_build_intermediate_library(
-    USE_INTERFACE
-    NAME environment
-    TARGET environment
+    USE_INTERFACE INSTALL_SOURCE
+    NAME core
+    TARGET core
     CATEGORY GLOBAL
     FOLDER components
     HEADERS ${header_files}
