--- a/source/timemory/hash/CMakeLists.txt
+++ b/source/timemory/hash/CMakeLists.txt
@@ -2,14 +2,11 @@ file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 timemory_build_intermediate_library(
-    USE_INTERFACE
-    NAME hash
-    TARGET hash
+    USE_INTERFACE INSTALL_SOURCE
+    NAME core
+    TARGET core
     CATEGORY GLOBAL
     FOLDER components
     HEADERS ${header_files}
     SOURCES ${source_files}
     PROPERTY_DEPENDS GLOBAL)
-
-list(REMOVE_ITEM source_files ${CMAKE_CURRENT_SOURCE_DIR}/hash.cpp)
-timemory_install_header_files(${source_files})
