--- a/source/tests/external/CMakeLists.txt
+++ b/source/tests/external/CMakeLists.txt
@@ -19,14 +19,16 @@ if(TIMEMORY_SOCKET_TESTS)
 endif()
 
 add_library(extern-test-templates ${_EXCLUDE} SHARED extern_templates.cpp)
-add_library(gotcha-tests-lib ${_EXCLUDE} SHARED gotcha_tests_lib.hpp gotcha_tests_lib.cpp)
-
-target_include_directories(gotcha-tests-lib PUBLIC ${CMAKE_CURRENT_LIST_DIR})
-
-target_link_libraries(gotcha-tests-lib PUBLIC common-test-libs)
 target_link_libraries(
     extern-test-templates PUBLIC common-test-libs timemory::timemory-plotting
                                  timemory::timemory-core timemory::timemory-dmp)
+
+if(TIMEMORY_USE_GOTCHA)
+    add_library(gotcha-tests-lib ${_EXCLUDE} SHARED gotcha_tests_lib.hpp
+                                 gotcha_tests_lib.cpp)
+    target_include_directories(gotcha-tests-lib PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+    target_link_libraries(gotcha-tests-lib PUBLIC common-test-libs)
+endif()
 
 set(_LIB_TAG)
 set(_LIB_TYPE)
