process, data, settings, IO component, log, manager, unwind updates
- process::get_parent_id
- process::get_group_id
- process::get_session_id
- process::get_siblings
- process::get_num_siblings
- components/io/components.cpp
- data/stream.cpp
- add timemory/data to timemory::timemory-core
- mv storage/ring_buffer.* to data/ring_buffer.*
- log::info_stream
- log::source_stream
- log::warning_stream
- log::fatal_stream
- log::info_string
- log::source_string
- log::warning_string
- log::fatal_string
- manager::write_metadata takes settings::compose_filename_config
- pid checks in sampling/timer and sampling/sampler
- added new settings output keys: %nid%, %pgid%, %psid%, %psize%
- settings::output_key
- settings::compose_filename_config has std::variant<pid_t, string> for suffix
- unwind::stack::get doesn't always pass pointer to bfd_file map

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -227,10 +227,12 @@ timemory_add_google_test(
     SOURCES api_tests.cpp
     LINK_LIBRARIES common-test-libs timemory::timemory-core ${_LIBRARY})
 
-timemory_add_google_test(
-    ring_buffer_tests
-    SOURCES ring_buffer_tests.cpp
-    LINK_LIBRARIES common-test-libs ${_LIBRARY} test-werror-flags)
+if(NOT WIN32)
+    timemory_add_google_test(
+        ring_buffer_tests
+        SOURCES ring_buffer_tests.cpp
+        LINK_LIBRARIES common-test-libs ${_LIBRARY} test-werror-flags)
+endif()
 
 timemory_add_google_test(
     type_trait_tests DISCOVER_TESTS
@@ -355,7 +357,7 @@ timemory_add_google_test(
     LINK_LIBRARIES common-test-libs timemory::timemory-plotting timemory::timemory-core
                    timemory::timemory-ompt ${_LIBRARY} ${_OPENMP})
 
-if(TIMEMORY_USE_PTL OR TARGET PTL::ptl)
+if(TIMEMORY_USE_PTL AND TARGET PTL::ptl)
     list(APPEND ptl_tests_env "TIMEMORY_ENABLE_PTHREAD_GOTCHA_WRAPPER=ON")
     timemory_add_google_test(
         ptl_tests
