--- a/source/timemory/data/CMakeLists.txt
+++ b/source/timemory/data/CMakeLists.txt
@@ -1,12 +1,10 @@
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-get_filename_component(folder_name "${CMAKE_CURRENT_LIST_DIR}" NAME)
-
 timemory_build_intermediate_library(
     USE_INTERFACE INSTALL_SOURCE
-    NAME ${folder_name}
-    TARGET ${folder_name}
+    NAME core
+    TARGET core
     CATEGORY GLOBAL
     FOLDER components
     HEADERS ${header_files}
